--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 		"case-sensitive-paths-webpack-plugin": "2.1.2",
 		"chalk": "2.4.1",
 		"cors": "^2.8.4",
+		"cryptiles": "4.1.2",
 		"css-loader": "1.0.0",
+		"deep-extend": "0.5.1",
 		"dotenv": "6.1.0",
 		"dotenv-expand": "4.2.0",
 		"eslint": "5.6.1",
@@ -27,13 +29,16 @@
 		"extract-text-webpack-plugin": "3.0.2",
 		"file-loader": "2.0.0",
 		"fs-extra": "7.0.0",
+		"hoek": "4.2.1",
 		"html-webpack-plugin": "3.2.0",
 		"jest": "23.6.0",
+		"macaddress": "0.2.9",
 		"object-assign": "4.1.1",
 		"postcss-flexbugs-fixes": "4.1.0",
 		"postcss-loader": "3.0.0",
 		"promise": "8.0.2",
 		"raf": "3.4.0",
+		"randomatic": "3.0.0",
 		"react": "^16.3.1",
 		"react-dev-utils": "^6.0.4",
 		"react-dom": "^16.3.1",
@@ -42,6 +47,7 @@
 		"style-loader": "0.23.1",
 		"sw-precache-webpack-plugin": "0.11.5",
 		"url-loader": "1.1.1",
+		"url-parse": "1.4.3",
 		"validator": "^10.8.0",
 		"webpack": "4.20.2",
 		"webpack-dev-server": "3.1.9",
